force-app/main/default/objects/Distributor_Sellout_Alias__c/Distributor_Sellout_Alias__c.object-meta.xml
<CustomObject>
    <label>Distributor Sellout Alias</label>
    <nameField>
        <displayFormat>DIST-{00000}</displayFormat>
        <label>Distributor Sellout Alias Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Sellout Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>