force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Brick_Code__c.field-meta.xml
<CustomField>
    <fullName>Brick_Code__c</fullName>
    <label>Brick Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>