force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Brick_Name__c.field-meta.xml
<CustomField>
    <fullName>Brick_Name__c</fullName>
    <label>Brick Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>