force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Distributor_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Client_Code__c</fullName>
    <label>Distributor Client Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>