force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Distributor_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Client_Name__c</fullName>
    <label>Distributor Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>