force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Geocode_Message__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Message__c</fullName>
    <description>Human-readable geocode failure or skip reason for sellout review UI.</description>
    <label>Geocode Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>