force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <label>Geocode Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Geocoded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>