force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Governorate__c.field-meta.xml
<CustomField>
    <fullName>Governorate__c</fullName>
    <label>Governorate</label>
    <length>120</length>
    <type>Text</type>
</CustomField>