force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <label>Match Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BrickCode</fullName>
            </value>
            <value>
                <fullName>GeoProximity+Name</fullName>
            </value>
            <value>
                <fullName>FuzzyName</fullName>
            </value>
            <value>
                <fullName>BranchMaster</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>PharmacyName</fullName>
            </value>
            <value>
                <fullName>GeoProximity+Pharmacy</fullName>
            </value>
            <value>
                <fullName>GeoCluster+AutoCreate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>