force-app/main/default/objects/Distributor_Sellout_Alias__c/fields/Pharmacy_Account__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Sellout Aliases</relationshipLabel>
    <relationshipName>Sellout_Aliases_Canonical</relationshipName>
    <type>Lookup</type>
</CustomField>